header-fix, add fonts, telegram, hide scrollbar

--- a/src/components/TradeTrade.js/Trade.scss
+++ b/src/components/TradeTrade.js/Trade.scss
@@ -40,6 +40,7 @@ background: #FFFFFF;
 width: 100%;
 height: 100%;
 object-fit: fill;
+margin-top: 74px;
 
 }
 .first{
