--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,14 @@
 @import "./styles/variables.scss";
 
+@font-face {
+  font-family: 'Helios';
+  src: local('Helios'), url(./assets/font/heliosc.otf) format('truetype');
+}
+
+@font-face {
+  font-family: 'HeliosBlackC';
+  src: local('HeliosBlackC'), url(./assets/font/heliosblackc.otf) format('truetype');
+}
 /* Reset styles */
 *,
 *::before,
@@ -35,8 +44,19 @@ body {
   min-width: 100%;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
+  font-family: Helios;
 }
 button{
   font-size: $font-size-medium;
   cursor: pointer;
 }
+
+
+html {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
+
